--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Converters for various coordinate representations.",
   "author": {
     "name": "Damian Krzeminski",
-    "email": "pirxpilot@code42day.com",
-    "url": "https://code42day.com"
+    "email": "pirxpilot@furkot.com",
+    "url": "https://pirxpilot.me"
   },
-  "repository": "code42day/lonlat",
+  "repository": "pirxpilot/lonlat",
   "license": "MIT",
   "keywords": [
     "lonlat",
