--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lodash": "^4.15.0"
   },
   "devDependencies": {
-    "jshint": "^2.7.0",
+    "@pirxpilot/jshint": "~3",
     "mocha": "^3.0.2",
     "should": "^11.1.0"
   },
